<resources>
    <string name="app_name">IT家园</string>
    <string name="author">Danmo</string>
    <string name="git_hub">GitHub</string>
    <string name="blog">Blog</string>
    <string name="demo_of_android_util_code">Owner the World</string>

    <string name="main_tab_name_news">资讯</string>
    <string name="main_tab_name_tweet">辣品</string>
    <string name="main_tab_name_explore">圈子</string>
    <string name="main_tab_name_my">我</string>
    <string name="yesterday">昨天</string>
    <string name="just">刚刚</string>
    <string name="comment_text">评</string>

    <string name="flexible_title">标题</string>
    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>


    <string name="option_title_refresh">刷新</string>
    <string name="option_title_font">字体大小</string>
    <string name="option_title_night">夜间模式</string>
    <string name="option_title_browser">调用外部浏览器打开</string>
    <string name="option_title_error">文章纠错</string>
    <string name="option_title_speech">语音朗读</string>

    <string name="bye_burger_float_behavior">com.danmo.commonutil.behavior.ByeBurgerFloatButtonBehavior</string>
    <string name="bye_burger_bottom_behavior">com.danmo.commonutil.behavior.ByeBurgerBottomBehavior</string>
    <string name="bye_burger_title_behavior">com.danmo.commonutil.behavior.ByeBurgerTitleBehavior</string>

    <string name="detail_zebian">责编: 马卡</string>
    <string name="detail_author">新浪科技</string>
    <string name="detail_time">2017-09-23 19:51</string>
    <string name="detail_jiucuo">纠错</string>
    <string name="detail_comment_tip">打分后显示文章质量得分，当前%d人打分</string>
    <string name="detail_comment_bad">无价值</string>
    <string name="detail_comment_soso">还可以</string>
    <string name="detail_comment_good">有价值</string>
    <string name="detail_releated_actical">相关文章</string>
    <string name="detail_recommend_actical">大家都在买</string>
</resources>
